@@ -19,11 +19,11 @@ package org.zmlx.hg4idea.log;
 import com.intellij.openapi.components.ServiceManager;
 import com.intellij.openapi.diagnostic.Logger;
 import com.intellij.openapi.project.Project;
+import com.intellij.openapi.util.Pair;
 import com.intellij.openapi.util.text.StringUtil;
 import com.intellij.openapi.vcs.VcsException;
 import com.intellij.openapi.vcs.VcsKey;
 import com.intellij.openapi.vfs.VirtualFile;
-import com.intellij.util.ArrayUtil;
 import com.intellij.util.Consumer;
 import com.intellij.util.Function;
 import com.intellij.util.containers.ContainerUtil;
@@ -45,10 +45,7 @@ import org.zmlx.hg4idea.util.HgHistoryUtil;
 import org.zmlx.hg4idea.util.HgUtil;
 
 import java.text.SimpleDateFormat;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 /**
  * @author Nadya Zabrodina
@@ -73,8 +70,7 @@ public class HgLogProvider implements VcsLogProvider {
   @Override
   public List<? extends VcsFullCommitDetails> readFirstBlock(@NotNull VirtualFile root,
                                                              boolean ordered, int commitCount) throws VcsException {
-    String[] params = ordered ? ArrayUtil.EMPTY_STRING_ARRAY : new String[]{"-r", "0:tip"};
-    return HgHistoryUtil.history(myProject, root, commitCount, params);
+    return HgHistoryUtil.history(myProject, root, commitCount, ordered ? Collections.<String>emptyList() : Arrays.asList("-r", "0:tip"));
   }
 
   @NotNull
@@ -225,7 +221,7 @@ public class HgLogProvider implements VcsLogProvider {
       }
     }
 
-    return HgHistoryUtil.history(myProject, root, -1, ArrayUtil.toStringArray(filterParameters));
+    return HgHistoryUtil.history(myProject, root, -1, filterParameters);
   }
 
   @Nullable
@@ -235,8 +231,11 @@ public class HgLogProvider implements VcsLogProvider {
     if (userName == null) {
       userName = System.getenv("HGUSER");
     }
-    List<String> userArgs = HgUtil.parseUserNameAndEmail(userName);
-    return userName == null ? null : myVcsObjectsFactory.createUser(userArgs.get(0), userArgs.get(1));
+    if (userName == null) {
+      return null;
+    }
+    Pair<String, String> userArgs = HgUtil.parseUserNameAndEmail(userName);
+    return myVcsObjectsFactory.createUser(userArgs.getFirst(), userArgs.getSecond());
   }
 
   private static String prepareParameter(String paramName, String value) {
